--- a/client/bower.json
+++ b/client/bower.json
@@ -26,7 +26,8 @@
     "langmap": "~0.0.10",
     "angular-animate": "1.4.8",
     "angular-embed": "~3.0.1",
-    "angular-contenteditable": "~0.3.8"
+    "angular-contenteditable": "~0.3.8",
+    "angular-vs-repeat": "^1.1.4"
   },
   "ignore": [
     "**/.*",
