quickfix(docker: nginx): remove redundant colon

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -28,7 +28,7 @@ http {
     recursive_error_pages   on;
 
     server_name_in_redirect off;
-    server_names_hash_bucket_size: 128;
+    server_names_hash_bucket_size 128;
 
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
