avoid running e2e tests, but let it check the build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,12 @@
 language: python
 
-python:
-    - "3.4"
+python: 3.4
 
 sudo: false
 
 env:
     - TARGET=unit
-    - TARGET=e2e_first_chrome
-    - TARGET=e2e_second_chrome
-    - TARGET=e2e_third_chrome
+    - TARGET=e2e_build_test
 
 matrix:
     allow_failures:
