--- a/client/bower.json
+++ b/client/bower.json
@@ -28,7 +28,8 @@
     "angular-animate": "1.4.8",
     "angular-embed": "~3.0.1",
     "angular-contenteditable": "~0.3.8",
-    "angular-vs-repeat": "^1.1.4"
+    "angular-vs-repeat": "^1.1.4",
+    "exif-js": "^2.1.1"
   },
   "ignore": [
     "**/.*",
@@ -41,6 +42,8 @@
     "rangy": "~1.3.0"
   },
   "resolutions": {
-    "angular": "1.4.8"
+    "angular": "1.4.8",
+    "ng-file-upload": "11.2.3",
+    "medium-editor": "4.9.0"
   }
 }
