--- a/client/bower.json
+++ b/client/bower.json
@@ -12,6 +12,7 @@
     "angular-mocks": "1.4.8",
     "angular-gettext": "2.0.1",
     "angular-bootstrap": "0.13.0",
+    "angular-i18n": "^1.5.3",
     "gridster": "0.5.6",
     "d3": "3.5.3",
     "jcrop": "0.9.12",
