--- a/client/bower.json
+++ b/client/bower.json
@@ -18,12 +18,11 @@
     "ng-file-upload": "11.2.3",
     "raven-js": "1.1.11",
     "jquery-ui": "1.11.2",
-    "medium-editor": "4.9.0",
+    "medium-editor": "5.14.4",
     "ment.io": "0.9.22",
     "angular-moment": "~0.10.3",
     "classnames": "~2.2.0",
     "react": "~0.14.3",
-    "protractor": "~3.0.0",
     "langmap": "~0.0.10",
     "angular-animate": "1.4.8",
     "angular-embed": "~3.0.1",
@@ -42,8 +41,6 @@
     "rangy": "~1.3.0"
   },
   "resolutions": {
-    "angular": "1.4.8",
-    "ng-file-upload": "11.2.3",
-    "medium-editor": "4.9.0"
+    "angular": "1.4.8"
   }
 }
