--- a/client/bower.json
+++ b/client/bower.json
@@ -41,6 +41,8 @@
     "rangy": "~1.3.0"
   },
   "resolutions": {
-    "angular": "1.4.8"
+    "angular": "1.4.8",
+    "ng-file-upload": "11.2.3",
+    "medium-editor": "5.14.4"
   }
 }
