--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,4 +1,3 @@
 gunicorn==19.4.5
 honcho==0.6.6
-
-git+git://github.com/superdesk/superdesk-core.git@2da82b7fa#egg=Superdesk-Core
+superdesk-core==1.0b1
