--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,3 +1,4 @@
 gunicorn==19.4.5
 honcho==0.6.6
-superdesk-core==1.0b1
+
+git+git://github.com/superdesk/superdesk-core.git@f6fe25b64#egg=Superdesk-Core
