updated docker images for third party containers
SD-4323

--- a/docker/logstash/logstash.conf
+++ b/docker/logstash/logstash.conf
@@ -30,5 +30,5 @@ filter {
 }
 
 output {
-  elasticsearch { host => elastic port => 9200 protocol => "http" }
+  elasticsearch { hosts => "elastic:9200" }
 }
