--- a/docker/superdesk_vhost.conf
+++ b/docker/superdesk_vhost.conf
@@ -27,7 +27,7 @@ server {
 		proxy_pass http://superdesk_docker;
 		proxy_redirect off;
 
-		proxy_set_header Host $host;
+		proxy_set_header Host $http_host;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 	}
@@ -36,7 +36,7 @@ server {
 		proxy_pass http://superdesk_pubapi_docker;
 		proxy_redirect off;
 
-		proxy_set_header Host $host;
+		proxy_set_header Host $http_host;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 	}
