--- a/docker/docker-compose-prebuilt.yml
+++ b/docker/docker-compose-prebuilt.yml
@@ -47,9 +47,15 @@ superdesk:
    - logstash
    - postfix
    - pubapi
+  environment:
+   - SUPERDESK_URL=http://localhost:8080/api
+   - SUPERDESK_WS_URL=ws://localhost:8080/ws
+   - PUBLICAPI_URL=http://localhost:8080/pubapi
+   - SUPERDESK_CLIENT_URL=http://localhost:8080
   ports:
-   - "443:443"
-   - "80:80"
+   - "8080:80"
+  volumes:
+   - ./superdesk_vhost.conf:/etc/nginx/sites-enabled/superdesk.conf
 
 pubapi:
   extends:
@@ -62,3 +68,8 @@ pubapi:
    - logstash
    - postfix
   image: sourcefabric/superdesk-content-api:master
+  environment:
+   - SUPERDESK_URL=http://localhost:8080/api
+   - SUPERDESK_WS_URL=ws://localhost:8080/ws
+   - PUBLICAPI_URL=http://localhost:8080/pubapi
+   - SUPERDESK_CLIENT_URL=http://localhost:8080
