--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
     "name": "superdesk",
     "license": "GPL-3.0",
     "dependencies": {
-        "superdesk-core": "superdesk/superdesk-client-core#ebc2a2209fa5975bf598c8aca3af792638691bf1",
+        "superdesk-core": "superdesk/superdesk-client-core#b5cff7123",
         "grunt": "~0.4.5",
         "grunt-angular-gettext": "2.1.3",
         "grunt-angular-templates": "0.5.7",
@@ -29,8 +29,8 @@
         "karma-jasmine": "^0.3.6",
         "karma-junit-reporter": "^0.3.3",
         "karma-ng-html2js-preprocessor": "^0.1.2",
-        "karma-phantomjs-launcher": "^0.2.0",
-        "phantomjs": "^1.9.17",
+        "karma-phantomjs-launcher": "^1.0.0",
+        "phantomjs-prebuilt": "^2.1.7",
         "protractor": "2.2.0",
         "protractor-flake": "1.0.1"
     }
