--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "protractor-flake": "1.0.1",
     "request": "2.61.0",
     "selenium-webdriver": "2.45.1",
-    "grunt-contrib-jshint": "~0.11.1"
+    "grunt-contrib-jshint": "~0.11.1",
+    "grunt-connect-proxy": "0.2.0"
   }
 }
