--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "superdesk-core": "superdesk/superdesk-client-core#3efbda5b86388c57dbe731f5cd65fef733af2e92",
-    "btoa": "1.1.2",
-    "grunt": "0.4.5",
+    "grunt": "~0.4.5",
     "grunt-angular-gettext": "2.1.3",
     "grunt-angular-templates": "0.5.7",
     "grunt-contrib-clean": "0.6.0",
@@ -12,6 +11,7 @@
     "grunt-contrib-connect": "0.11.2",
     "grunt-contrib-copy": "0.8.1",
     "grunt-contrib-cssmin": "0.13.0",
+    "grunt-contrib-jshint": "~0.11.1",
     "grunt-contrib-less": "1.0.1",
     "grunt-contrib-uglify": "0.9.2",
     "grunt-contrib-watch": "0.6.1",
@@ -23,21 +23,15 @@
     "grunt-open": "0.2.3",
     "grunt-template": "0.2.3",
     "grunt-usemin": "3.1.1",
-    "jasmine-reporters": "2.0.7",
-    "karma": "0.13.9",
-    "karma-chrome-launcher": "0.2.0",
-    "karma-coverage": "0.5.0",
-    "karma-jasmine": "0.3.6",
-    "karma-junit-reporter": "0.3.3",
-    "karma-ng-html2js-preprocessor": "0.1.2",
+    "karma": "^0.13.9",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-coverage": "^0.5.0",
+    "karma-jasmine": "^0.3.6",
+    "karma-junit-reporter": "^0.3.3",
+    "karma-ng-html2js-preprocessor": "^0.1.2",
     "karma-phantomjs-launcher": "^1.0.0",
-    "load-grunt-config": "0.17.2",
-    "load-grunt-tasks": "3.2.0",
-    "phantomjs": "^1.9.17",
+    "phantomjs-prebuilt": "^2.1.7",
     "protractor": "2.2.0",
-    "protractor-flake": "1.0.1",
-    "request": "2.61.0",
-    "selenium-webdriver": "2.45.1",
-    "grunt-contrib-jshint": "~0.11.1"
+    "protractor-flake": "1.0.1"
   }
 }
