--- a/.travis.yml
+++ b/.travis.yml
@@ -41,5 +41,6 @@ install:
 script:
     - cd client && npm test && cd ..
     - cd server && flake8 && cd ..
+    - cd server && nosetests && cd ..
     - cd client && grunt build && cd ..
     - cd server && python manage.py users:create -u test -p test -e test@localhost --admin && cd ..
