--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,8 @@ before_install:
     - unzip chrome-linux.zip
     - export CHROME_BIN=`pwd`/chrome-linux/chrome
     - $CHROME_BIN --version
+    - sudo apt-get -qq update
+    - sudo apt-get install -y unixodbc unixodbc-dev freetds-dev freetds-bin tdsodbc
 
 install:
     - cd server && pip install -r dev-requirements.txt && cd ..
