--- a/docker/superdesk_vhost.conf
+++ b/docker/superdesk_vhost.conf
@@ -45,4 +45,10 @@ server {
 		root /opt/superdesk/client/dist;
 	}
 
+	location /tansaclient {
+		proxy_pass http://d02.tansademo.net:8080;
+		proxy_http_version 1.1;
+		proxy_buffering off;
+	}
+
 }
