--- a/docker/superdesk_vhost.conf
+++ b/docker/superdesk_vhost.conf
@@ -41,7 +41,7 @@ server {
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 	}
 
-	location /tansaclient {
+	location /tansaclient/ {
 		proxy_pass http://d02.tansademo.net:8080;
 	}
 
