fix(tansa): Set nginx proxy for tansa

--- a/docker/superdesk_vhost.conf
+++ b/docker/superdesk_vhost.conf
@@ -42,7 +42,7 @@ server {
 	}
 
 	location /tansaclient/ {
-		proxy_pass http://d02.tansademo.net:8080;
+		return 301 http://d02.tansademo.net:8080;
 	}
 
 	location / {
