--- a/docker/superdesk_vhost.conf
+++ b/docker/superdesk_vhost.conf
@@ -41,8 +41,9 @@ server {
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 	}
 
-	location /tansaclient/ {
-		return 301 http://d02.tansademo.net:8080;
+	location /tansaclient {
+		proxy_pass http://d02.tansademo.net:8080;
+                proxy_set_header Host d02.tansademo.net;
 	}
 
 	location / {
