--- a/server/Procfile
+++ b/server/Procfile
@@ -1,4 +1,4 @@
-rest: gunicorn -c gunicorn_config.py wsgi
+rest: NEW_RELIC_CONFIG_FILE=newrelic.ini newrelic-admin run-program gunicorn -c gunicorn_config.py wsgi
 wamp: python3 -u ws.py
-work: celery -A worker worker
+work: NEW_RELIC_CONFIG_FILE=newrelic.ini newrelic-admin run-program celery -A worker worker
 beat: celery -A worker beat --pid=
