--- a/server/Procfile
+++ b/server/Procfile
@@ -1,7 +1,4 @@
 rest: gunicorn -c gunicorn_config.py wsgi
 wamp: python3 -u ws.py
-work: celery -A worker -Q default  worker
-expiry: celery -A worker -Q expiry  worker
-legal: celery -A worker -Q legal  worker
-publish: celery -A worker -Q publish  worker
+work: celery -A worker worker
 beat: celery -A worker beat --pid=
