remove npm locks from travis cache
this can break next build

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,3 +41,6 @@ script:
     - cd server && flake8 && cd ..
     - cd client && grunt build && cd ..
     - cd server && python manage.py users:create -u test -p test -e test@localhost --admin && cd ..
+
+after_script:
+    - rm .npm/*.lock
