--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,12 @@
   "name": "superdesk-client",
   "license": "GPL-3.0",
   "dependencies": {
-    "superdesk-core": "superdesk/superdesk-client-core#33510d8482f95574aadb0c5f33ec0e19fc5c59d8",
+    "superdesk-core": "superdesk/superdesk-client-core#ce3238567",
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "css-loader": "^0.23.1",
+    "file-loader": "^0.9.0",
     "grunt": "~0.4.5",
     "grunt-angular-gettext": "2.1.3",
     "grunt-angular-templates": "0.5.7",
@@ -23,6 +28,10 @@
     "grunt-open": "0.2.3",
     "grunt-template": "0.2.3",
     "grunt-usemin": "3.1.1",
+    "grunt-webpack": "^1.0.11",
+    "jasmine-core": "^2.4.1",
+    "jquery": "^3.1.0",
+    "jquery-jcrop": "^0.9.13",
     "karma": "^0.13.9",
     "karma-chrome-launcher": "^0.2.0",
     "karma-coverage": "^0.5.0",
@@ -30,7 +39,14 @@
     "karma-junit-reporter": "^0.3.3",
     "karma-ng-html2js-preprocessor": "^0.1.2",
     "karma-phantomjs-launcher": "^1.0.0",
+    "karma-webpack": "^1.7.0",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
+    "lodash": "^4.13.1",
     "phantomjs-prebuilt": "^2.1.7",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1",
     "protractor": "2.2.0",
     "protractor-flake": "1.0.1"
   }
