--- a/.travis.yml
+++ b/.travis.yml
@@ -21,12 +21,12 @@ cache:
   directories:
     - $HOME/.cache/pip
     - $HOME/.npm
-    - $HOME/.cache/bower
 
 before_install:
     - cat /etc/issue ; which python2.7
+    - npm install -g npm@latest
     - npm config set python python2.7
-    - npm install -g grunt-cli bower
+    - npm install -g grunt-cli
     - pip install requests
     - export DISPLAY=:99.0
     - /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1920x1080x24
@@ -36,7 +36,7 @@ before_install:
 
 install:
     - cd server && pip install  -r dev-requirements.txt && cd ..
-    - cd client && npm install && bower install && cd ..
+    - cd client && npm install && cd ..
 
 script:
     - cd client && npm test && cd ..
