removed bower related stuff, extra .gitignore file and update protractor file definition

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,18 @@ lib/
 man/
 src/
 dist/
+node_modules
+.settings
+po/
+report/
+screenshots/
+coverage/
+e2e-test-results/
+*.sublime-workspace
+*.sublime-project
+nbproject/
+coveralls.json
+lcov.info
 build/
 include/
 .idea/
