ui(hotfix): fixes a problem with a regression in webpack

--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,6 @@
         "protractor-flake": "1.0.1",
         "style-loader": "^0.13.1",
         "webpack": "^1.13.1",
-        "webpack-dev-server": "^1.14.1"
+        "webpack-dev-server": "1.14.1"
     }
 }
