--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,4 +1,4 @@
 gunicorn==19.4.5
 honcho==0.6.6
 
--e git+git://github.com/superdesk/superdesk-core@cdbfca29be22cd5cb47690c9584459002eac2a10#egg=Superdesk-Core==0.1-dev
+-e git+git://github.com/superdesk/superdesk-core@00b3fd963f31c640fe587514b2230129ea0f7a42#egg=Superdesk-Core==1.2.dev1
