--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,9 @@ cache:
     - $HOME/.npm
 
 before_install:
+    - nvm install node
+    - nvm use node
+    - node --version
     - npm install -g npm@latest
     - npm install -g grunt-cli
     - pip install requests
@@ -41,6 +44,3 @@ script:
     - cd server && flake8 && cd ..
     - cd client && grunt build && cd ..
     - cd server && python manage.py users:create -u test -p test -e test@localhost --admin && cd ..
-
-after_script:
-    - rm .npm/*.lock
