--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,9 @@ cache:
     - $HOME/.npm
 
 before_install:
+    - nvm install node
+    - nvm use node
+    - node --version
     - npm install -g npm@latest
     - npm install -g grunt-cli
     - pip install requests
@@ -34,7 +37,7 @@ before_install:
 
 install:
     - cd server && pip install -r dev-requirements.txt && cd ..
-    - cd client && npm install && cd ..
+    - cd client && npm install --python=python2.7 && cd ..
 
 script:
     - cd client && npm test && cd ..
