--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "superdesk-client",
   "license": "GPL-3.0",
   "dependencies": {
-    "superdesk-core": "superdesk/superdesk-client-core#d2885b7",
+    "superdesk-core": "superdesk/superdesk-client-core#42f4a91",
     "btoa": "1.1.2",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
@@ -44,6 +44,8 @@
     "karma-webpack": "^1.7.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "node-sass": "^3.10.1",
+    "sass-loader": "^4.0.2",
     "lodash": "^4.13.1",
     "load-grunt-config": "0.17.2",
     "load-grunt-tasks": "3.2.0",
