feat(sass): Added sass modules to package.json

--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
     "name": "superdesk",
     "license": "GPL-3.0",
     "dependencies": {
-        "superdesk-core": "superdesk/superdesk-client-core#613df10",
+        "superdesk-core": "superdesk/superdesk-client-core#c55e0e720",
         "babel-core": "^6.10.4",
         "babel-loader": "^6.2.4",
         "babel-preset-es2015": "^6.9.0",
@@ -40,8 +40,8 @@
         "karma-ng-html2js-preprocessor": "^0.1.2",
         "karma-phantomjs-launcher": "^1.0.0",
         "karma-webpack": "^1.7.0",
-        "less": "^2.7.1",
-        "less-loader": "^2.2.3",
+        "node-sass": "^3.10.1",
+        "sass-loader": "^4.0.2",
         "lodash": "^4.13.1",
         "phantomjs-prebuilt": "^2.1.7",
         "protractor": "2.2.0",
