--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
         "babel-core": "^6.10.4",
         "babel-loader": "^6.2.4",
         "babel-preset-es2015": "^6.9.0",
+        "babel-preset-react": "^6.16.0",
         "css-loader": "^0.23.1",
         "file-loader": "^0.9.0",
         "grunt": "~0.4.5",
