chore(cores): Update libs dependencies with last version from master and update cores for NTB

--- a/client/package.json
+++ b/client/package.json
@@ -2,11 +2,11 @@
   "name": "superdesk-client",
   "license": "GPL-3.0",
   "dependencies": {
-    "superdesk-core": "superdesk/superdesk-client-core#42f4a91",
-    "btoa": "1.1.2",
+    "superdesk-core": "superdesk/superdesk-client-core#a5546a5",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.16.0",
     "css-loader": "^0.23.1",
     "file-loader": "^0.9.0",
     "grunt": "~0.4.5",
@@ -31,33 +31,26 @@
     "grunt-usemin": "3.1.1",
     "grunt-webpack": "^1.0.11",
     "jasmine-core": "^2.4.1",
-    "jasmine-reporters": "2.0.7",
     "jquery": "^3.1.0",
     "jquery-jcrop": "^0.9.13",
     "karma": "^0.13.9",
-    "karma-chrome-launcher": "0.2.0",
-    "karma-coverage": "0.5.0",
-    "karma-jasmine": "0.3.6",
-    "karma-junit-reporter": "0.3.3",
-    "karma-ng-html2js-preprocessor": "0.1.2",
-    "karma-phantomjs-launcher": "^0.2.0",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-coverage": "^0.5.5",
+    "karma-jasmine": "^0.3.8",
+    "karma-junit-reporter": "^0.3.3",
+    "karma-ng-html2js-preprocessor": "^0.1.2",
+    "karma-phantomjs-launcher": "^1.0.0",
     "karma-webpack": "^1.7.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "node-sass": "^3.10.1",
     "sass-loader": "^4.0.2",
     "lodash": "^4.13.1",
-    "load-grunt-config": "0.17.2",
-    "load-grunt-tasks": "3.2.0",
-    "phantomjs": "^1.9.17",
     "phantomjs-prebuilt": "^2.1.7",
     "protractor": "2.2.0",
     "protractor-flake": "1.0.1",
-    "request": "2.61.0",
-    "selenium-webdriver": "2.45.1",
-    "grunt-connect-proxy": "0.2.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "1.14.1"
   }
 }
