--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
     "name": "superdesk",
     "license": "GPL-3.0",
     "dependencies": {
-        "superdesk-core": "1.3.0-rc.2",
+        "superdesk-core": "1.3.0",
         "babel-core": "^6.10.4",
         "babel-loader": "^6.2.4",
         "babel-preset-es2015": "^6.9.0",
