--- a/server/Procfile
+++ b/server/Procfile
@@ -2,3 +2,4 @@ rest: gunicorn -c gunicorn_config.py wsgi
 wamp: python3 -u ws.py
 work: celery -A worker worker
 beat: celery -A worker beat --pid=
+capi: gunicorn -c gunicorn_config.py content_api_wsgi
