--- a/docker/superdesk_vhost.conf
+++ b/docker/superdesk_vhost.conf
@@ -7,7 +7,7 @@ upstream superdesk_ws_docker {
 }
 
 upstream superdesk_pubapi_docker {
-	server pubapi:5050;
+	server localhost:5400;
 }
 
 server {
