--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,6 @@
     "name": "superdesk",
     "license": "GPL-3.0",
     "dependencies": {
-        "superdesk-core": "superdesk/superdesk-client-core#1226221d5"
+        "superdesk-core": "file:../client-core"
     }
 }
