--- a/docker/docker-compose-prebuilt.yml
+++ b/docker/docker-compose-prebuilt.yml
@@ -46,6 +46,7 @@ superdesk:
    - elastic
    - logstash
    - postfix
+   - pubapi
   environment:
    - SUPERDESK_URL=http://localhost:8080/api
    - SUPERDESK_WS_URL=ws://localhost:8080/ws
@@ -55,3 +56,20 @@ superdesk:
    - "8080:80"
   volumes:
    - ./superdesk_vhost.conf:/etc/nginx/sites-enabled/superdesk.conf
+
+pubapi:
+  extends:
+    file: common.yml
+    service: pubapi
+  links:
+   - mongodb
+   - redis
+   - elastic
+   - logstash
+   - postfix
+  image: sourcefabric/superdesk-content-api:master
+  environment:
+   - SUPERDESK_URL=http://localhost:8080/api
+   - SUPERDESK_WS_URL=ws://localhost:8080/ws
+   - PUBLICAPI_URL=http://localhost:8080/pubapi
+   - SUPERDESK_CLIENT_URL=http://localhost:8080
