--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -44,6 +44,18 @@ superdesk:
    - elastic
    - logstash
    - postfix
+   - pubapi
   ports:
    - "443:443"
    - "80:80"
+
+pubapi:
+  extends:
+    file: common.yml
+    service: pubapi
+  links:
+   - mongodb
+   - redis
+   - elastic
+   - logstash
+   - postfix
