--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 
-python: 3.4
+python: "3.5"
 
 sudo: false
 
@@ -20,11 +20,13 @@ cache:
   directories:
     - $HOME/.cache/pip
     - $HOME/.npm
-    - $HOME/.cache/bower
 
 before_install:
+    - nvm install node
+    - nvm use node
+    - node --version
     - npm install -g npm@latest
-    - npm install -g grunt-cli bower
+    - npm install -g grunt-cli
     - pip install requests
     - export DISPLAY=:99.0
     - /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1920x1080x24
@@ -35,13 +37,9 @@ before_install:
 
 install:
     - cd server && pip install -r dev-requirements.txt && cd ..
-    - cd client && npm install --python=python2.7 && bower install && cd ..
+    - cd client && npm install --python=python2.7 && cd ..
 
 script:
-    - cd client && npm test && cd ..
     - cd server && flake8 && cd ..
     - cd client && grunt build && cd ..
     - cd server && python manage.py users:create -u test -p test -e test@localhost --admin && cd ..
-
-after_script:
-    - rm .npm/*.lock
