update server core

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,4 +1,5 @@
 gunicorn==19.6.0
 honcho==0.6.6
 newrelic>=2.66,<2.67
-superdesk-core==1.4.1
+
+git+git://github.com/petrjasek/superdesk-core.git@e997a8e563554295591bf4d382e0934b1f39a576#egg=Superdesk-Core
