--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
     "dependencies": {
-        "superdesk-core": "1.5.0"
+        "superdesk-core": "superdesk/superdesk-client-core#4ed02e622"
     }
 }
