--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,4 @@
 gunicorn==19.6.0
 honcho==0.6.6
 newrelic>=2.66,<2.67
-
-git+git://github.com/superdesk/superdesk-core.git@110fc701e#egg=Superdesk-Core
+superdesk-core==1.6rc1
