--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
     "name": "superdesk",
     "dependencies": {
-        "superdesk-core": "superdesk/superdesk-client-core#2aff7db2b"
+        "superdesk-core": "1.6.0-rc.4"
     }
 }
