--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,4 +1,4 @@
 gunicorn==19.6.0
 honcho==0.6.6
 newrelic>=2.66,<2.67
-git+git://github.com/petrjasek/superdesk-core.git@3fdcdf15#egg=Superdesk-Core
+superdesk-core==1.6rc8
