--- a/docker/common.yml
+++ b/docker/common.yml
@@ -24,7 +24,7 @@ superdesk:
    - LEGAL_ARCHIVE_URI=mongodb://mongodb/test_la
    - ARCHIVED_URI=mongodb://mongodb/test_ar
    - ELASTICSEARCH_URL=http://elastic:9200
-   - ELASTICSEARCH_INDEX
+   - ELASTICSEARCH_INDEX=superdesk
    - CELERY_BROKER_URL=redis://redis:6379/1
    - REDIS_URL=redis://redis:6379/1
    - LOG_SERVER_ADDRESS=logstash
