--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,5 +2,5 @@ gunicorn==19.6.0
 honcho==0.6.6
 newrelic>=2.66,<2.67
 
-git+git://github.com/superdesk/superdesk-core.git@4235f4b34#egg=Superdesk-Core
-git+git://github.com/superdesk/superdesk-analytics.git@cb05ffe#egg=superdesk-analytics
+git+git://github.com/superdesk/superdesk-core.git@v1.7rc1#egg=Superdesk-Core
+git+git://github.com/superdesk/superdesk-analytics.git@f1a92e1#egg=superdesk-analytics
