--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,6 @@
     "license": "GPL-3.0",
     "dependencies": {
         "superdesk-analytics": "superdesk/superdesk-analytics#cc17f1d",
-        "superdesk-core": "superdesk/superdesk-client-core#dd674f5"
+        "superdesk-core": "superdesk/superdesk-client-core#v1.7.0-rc.1"
     }
 }
