Revert "updated to v1.7rc1"
temporarily needed to avoid a but introduced in commit 6150da3ad034d2e014d06c1f76f07677407d9808

This reverts commit beb0c250051816636f6f6f6d1a86054338e3ec00.

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
     "dependencies": {
-        "superdesk-core": "superdesk/superdesk-client-core#v1.7.0-rc.1"
+        "superdesk-core": "1.6.0-rc.4"
     }
 }
