use wpp_2 branch

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
     "dependencies": {
-        "superdesk-core": "jerome-poisson/superdesk-client-core#1.6_wpp"
+        "superdesk-core": "jerome-poisson/superdesk-client-core#1.6_wpp_2"
     }
 }
