--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,8 @@ cache:
     - $HOME/.npm
 
 before_install:
-    - nvm install node
-    - nvm use node
+    - nvm install 6.10
+    - nvm use 6.10
     - node --version
     - npm install -g npm@latest
     - npm install -g grunt-cli
@@ -37,7 +37,7 @@ before_install:
 
 install:
     - cd server && pip install -r dev-requirements.txt && cd ..
-    - cd client && npm install --python=python2.7 && cd ..
+    - cd client && npm install && cd ..
 
 script:
     - cd server && flake8 && cd ..
