install chrome using apt on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 
 python: "3.5"
 
+dist: trusty
 sudo: false
 
 services:
@@ -13,8 +14,10 @@ addons:
   apt:
     sources:
     - mongodb-3.0-precise
+    - google-chrome
     packages:
     - mongodb-org-server
+    - google-chrome-stable
 
 cache:
   directories:
@@ -30,10 +33,7 @@ before_install:
     - pip install requests
     - export DISPLAY=:99.0
     - /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1920x1080x24
-    - ./scripts/get-chrome-url | wget -N --no-verbose -i -
-    - unzip chrome-linux.zip
-    - export CHROME_BIN=`pwd`/chrome-linux/chrome
-    - $CHROME_BIN --version
+    - export CHROME_BIN=`which google-chrome` && $CHROME_BIN --version ;
 
 install:
     - cd server && pip install -r dev-requirements.txt && cd ..
