--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,6 @@
     "name": "superdesk",
     "license": "GPL-3.0",
     "dependencies": {
-        "superdesk-core": "superdesk/superdesk-client-core#e100036"
+        "superdesk-core": "1.8.0-rc.3"
     }
 }
