update server to use entrypoints

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,4 +42,4 @@ install:
 script:
     - cd server && flake8 && cd ..
     - cd client && grunt build && cd ..
-    - cd server && python manage.py users:create -u test -p test -e test@localhost --admin && cd ..
+    - cd server && superdesk users:create -u test -p test -e test@localhost --admin && cd ..
