--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
     "name": "superdesk",
     "dependencies": {
-        "superdesk-core": "superdesk/superdesk-client-core#c953c92"
+        "superdesk-core": "1.9.0-publisher.1"
     }
 }
