update core, planning
and disable analytics for now, it needs some fixes in packages.json

--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,7 @@
     "name": "superdesk",
     "license": "GPL-3.0",
     "dependencies": {
-        "superdesk-planning": "superdesk/superdesk-planning#e57f5b4",
-        "superdesk-analytics": "superdesk/superdesk-analytics#f856be7",
-        "superdesk-core": "superdesk/superdesk-client-core#9f50f0b"
+        "superdesk-core": "superdesk/superdesk-client-core#da7dd24",
+        "superdesk-planning": "superdesk/superdesk-planning#8a44dc8"
     }
 }
