--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
     "name": "superdesk",
     "license": "GPL-3.0",
     "dependencies": {
-        "superdesk-core": "superdesk/superdesk-client-core#da7dd24"
+        "superdesk-core": "superdesk/superdesk-client-core#da7dd24",
+        "superdesk-analytics": "superdesk/superdesk-analytics#d75c9c8"
     }
 }
