--- a/server/Procfile
+++ b/server/Procfile
@@ -1,4 +1,4 @@
 rest: gunicorn -c gunicorn_config.py wsgi
 wamp: python3 -u ws.py
-work: celery -A worker worker
-beat: celery -A worker beat --pid=
+#work: celery -A worker worker
+#beat: celery -A worker beat --pid=
