--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,5 +2,4 @@ beautifulsoup4==4.5.3
 gunicorn==19.6.0
 honcho==0.6.6
 newrelic>=2.66,<2.67
-
-git+git://github.com/superdesk/superdesk-core.git@7a7026e#egg=Superdesk-Core
+superdesk-core==1.11
