--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,4 +1,5 @@
-gunicorn==19.6.0
-honcho==0.6.6
+gunicorn==19.7.1
+honcho==1.0.1
 newrelic>=2.66,<2.67
-superdesk-core==1.8.5
+
+-e git+git://github.com/superdesk/superdesk-core.git@ea33b73#egg=Superdesk-Core
