--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,7 @@
     "name": "superdesk",
     "license": "GPL-3.0",
     "dependencies": {
-        "superdesk-analytics": "superdesk/superdesk-analytics#963c6e1",
-        "superdesk-core": "superdesk/superdesk-client-core#master",
+        "superdesk-core": "1.12.1",
         "superdesk-publisher": "superdesk/superdesk-publisher#dc87654"
     }
 }
