--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
     "dependencies": {
-        "superdesk-core": "1.12.0"
+        "superdesk-core": "superdesk/superdesk-client-core#216d815"
     },
     "devDependencies": {
         "superdesk-code-style": "^1.0.0"
