--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,6 +2,6 @@ gunicorn==19.7.1
 honcho==1.0.1
 newrelic>=2.66,<2.67
 
--e git+git://github.com/superdesk/superdesk-core.git@db9281131a#egg=Superdesk-Core
+-e git+git://github.com/superdesk/superdesk-core.git@master#egg=Superdesk-Core
 -e git+git://github.com/superdesk/superdesk-analytics.git@963c6e1#egg=superdesk-analytics
--e git+git://github.com/superdesk/superdesk-planning.git@34d32204d#egg=superdesk-planning
+-e git+git://github.com/superdesk/superdesk-planning.git@master#egg=superdesk-planning
