--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,10 @@
 {
     "dependencies": {
-        "superdesk-core": "1.16.0",
+        "superdesk-core": "superdesk/superdesk-client-core#a020139",
         "superdesk-planning": "superdesk/superdesk-planning#f3cb868"
     },
     "devDependencies": {
-        "superdesk-code-style": "^1.0.0"
+        "superdesk-code-style": "^1.1.1"
     },
     "scripts": {
         "lint": "eslint --ext .js --ext .jsx ansa"
