--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
     "dependencies": {
-        "superdesk-core": "1.17.0",
+        "superdesk-core": "superdesk/superdesk-client-core#cdf07ac",
         "superdesk-planning": "superdesk/superdesk-planning#f3cb868"
     },
     "devDependencies": {
