--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
     "name": "superdesk",
     "license": "GPL-3.0",
     "dependencies": {
-        "superdesk-core": "1.17.0",
-        "superdesk-publisher": "superdesk/superdesk-publisher#435e9dd"
+        "superdesk-core": "1.18.3",
+        "superdesk-publisher": "1.1"
     }
 }
