update semantics service
- use .51 service by default
- populate abstract using main sentences

SDANSA-173

--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
     "dependencies": {
-        "superdesk-core": "superdesk/superdesk-client-core#ff573b2",
-        "superdesk-planning": "superdesk/superdesk-planning#5fafa67"
+        "superdesk-core": "1.20.0",
+        "superdesk-planning": "superdesk/superdesk-planning#46bb76c"
     },
     "devDependencies": {
         "superdesk-code-style": "^1.1.1"
