SDESK-3023-DEMO [DEMO] Trigger CI for SDESK-3023 (server + client)

--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
     "license": "GPL-3.0",
     "dependencies": {
         "superdesk-analytics": "superdesk/superdesk-analytics#963c6e1",
-        "superdesk-core": "superdesk/superdesk-client-core#master",
+        "superdesk-core": "ride90/superdesk-client-core#SDESK-3023",
         "superdesk-publisher": "superdesk/superdesk-publisher#master"
     }
 }
