--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
     "name": "superdesk",
     "license": "GPL-3.0",
     "dependencies": {
-        "superdesk-analytics": "superdesk/superdesk-analytics#963c6e1",
+        "superdesk-analytics": "superdesk/superdesk-analytics#master",
         "superdesk-core": "superdesk/superdesk-client-core#master",
         "superdesk-publisher": "superdesk/superdesk-publisher#master"
     }
