--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,4 +3,4 @@ honcho==1.0.1
 newrelic>=2.66,<2.67
 
 -e git+git://github.com/superdesk/superdesk-core.git@master#egg=Superdesk-Core
--e git+git://github.com/superdesk/superdesk-analytics.git@963c6e1#egg=superdesk-analytics
+-e git+git://github.com/superdesk/superdesk-analytics.git@master#egg=superdesk-analytics
