--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,4 +1,5 @@
 gunicorn==19.7.1
 honcho==1.0.1
 newrelic>=2.66,<2.67
-superdesk-core==1.22.1
+
+-e git+git://github.com/superdesk/superdesk-core.git@5b2589b#egg=Superdesk-Core
