--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
     "dependencies": {
-        "superdesk-core": "1.23.0",
-        "superdesk-planning": "superdesk/superdesk-planning#40799d9"
+        "superdesk-core": "1.25.0",
+        "superdesk-planning": "superdesk/superdesk-planning#1.1"
     },
     "devDependencies": {
         "superdesk-code-style": "^1.1.1"
