--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,6 @@
     "name": "superdesk",
     "license": "GPL-3.0",
     "dependencies": {
-        "superdesk-analytics": "superdesk/superdesk-analytics#master",
-        "superdesk-core": "superdesk/superdesk-client-core#master",
-        "superdesk-publisher": "superdesk/superdesk-publisher#master"
+        "superdesk-core": "1.25.1"
     }
 }
