--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,4 @@
 gunicorn==19.7.1
 honcho==1.0.1
 newrelic>=2.66,<2.67
-
--e git+git://github.com/superdesk/superdesk-core.git@master#egg=Superdesk-Core
--e git+git://github.com/superdesk/superdesk-analytics.git@master#egg=superdesk-analytics
+Superdesk-Core==1.25.2
