--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,8 @@
     "name": "superdesk",
     "license": "GPL-3.0",
     "dependencies": {
-        "superdesk-core": "1.25.1"
+        "superdesk-core": "1.25.1",
+        "superdesk-planning": "superdesk/superdesk-planning#1.2",
+        "superdesk-publisher": "superdesk/superdesk-publisher#v1.2.5"
     }
 }
