--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,3 +2,4 @@ gunicorn==19.7.1
 honcho==1.0.1
 newrelic>=2.66,<2.67
 Superdesk-Core==1.25.2
+git+git://github.com/superdesk/superdesk-planning.git@1.2#egg=superdesk-planning
