--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
     "dependencies": {
-        "superdesk-core": "1.25.0",
+        "superdesk-core": "superdesk/superdesk-client-core#17dd81f",
         "superdesk-planning": "superdesk/superdesk-planning#1.1"
     },
     "devDependencies": {
