--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,6 @@
     "dependencies": {
         "superdesk-core": "^1.25",
         "superdesk-planning": "superdesk/superdesk-planning#master",
-        "superdesk-publisher": "superdesk/superdesk-publisher#v1.3.1"
+        "superdesk-publisher": "superdesk/superdesk-publisher#master"
     }
 }
