--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
     "dependencies": {
-        "superdesk-core": "superdesk/superdesk-client-core#4e944bf",
+        "superdesk-core": "^1.26.1",
         "superdesk-planning": "superdesk/superdesk-planning#1.1"
     },
     "devDependencies": {
