--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,6 @@
     "license": "GPL-3.0",
     "dependencies": {
         "superdesk-core": "^1.25",
-        "superdesk-publisher": "superdesk/superdesk-publisher#v1.3.1"
+        "superdesk-publisher": "superdesk/superdesk-publisher#master"
     }
 }
