Updates Superdesk client and server core to latest v1.27 Define basic client and server settings

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,7 @@
 {
+    "name": "superdesk",
+    "license": "GPL-3.0",
     "dependencies": {
-        "superdesk-core": "1.21.3"
+        "superdesk-core": "1.27.1"
     }
 }
