update cores to 1.28

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
     "dependencies": {
-        "superdesk-core": "petrjasek/superdesk-client-core#49af641",
+        "superdesk-core": "1.28.0",
         "superdesk-planning": "superdesk/superdesk-planning#891c6b47"
     },
     "devDependencies": {
