use npm scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,5 +35,5 @@ install:
 
 script:
     - cd server && flake8 && cd ..
-    - cd client && grunt build && cd ..
+    - cd client && npm run build && cd ..
     - cd server && python manage.py users:create -u test -p test -e test@localhost --admin && cd ..
