point to master so SDANSA-265 can be tested

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
     "dependencies": {
-        "superdesk-core": "superdesk/superdesk-client-core#93295f4",
+        "superdesk-core": "superdesk/superdesk-client-core#master",
         "superdesk-planning": "superdesk/superdesk-planning#1.5"
     },
     "devDependencies": {
