update cores to release/v1.31

--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,8 @@
 {
+    "private": true,
     "name": "superdesk",
     "license": "GPL-3.0",
     "dependencies": {
-        "superdesk-core": "superdesk/superdesk-client-core#1.30"
+        "superdesk-core": "superdesk/superdesk-client-core#release/v1.31"
     }
 }
