--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,4 +1,4 @@
 gunicorn==19.7.1
 honcho==1.0.1
 newrelic>=2.66,<2.67
--e git+git://github.com/superdesk/superdesk-core.git@1.30#egg=superdesk-core
+-e git+git://github.com/superdesk/superdesk-core.git@release/v1.31#egg=superdesk-core
